--- a/package.json
+++ b/package.json
@@ -11,11 +11,14 @@
     "history": "^4.10.1",
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
+    "react-color": "^2.18.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
@@ -24,6 +27,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage": "https://jvrhjvrh.github.io/myPortfolioSite/",
   "browserslist": {
     "production": [
       ">0.2%",
@@ -44,6 +48,7 @@
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react-hooks": "^3.0.0",
+    "gh-pages": "^2.2.0",
     "react-test-renderer": "^16.13.1",
     "react-testing-library": "^8.0.1"
   },
