--- a/.travis.yml
+++ b/.travis.yml
@@ -2,17 +2,17 @@ dist: xenial
 
 os: linux
 
-language: node_js
+language: generic
 
 services:
-  -npm
+  - docker
 
 before_install:
-  -npm install
+  - docker build -f Dockerfile.dev  -t jvrh/docker-teste .
 
 script:
-  -CI=true npm run test
-
+  - docker run -e CI=true jvrh/docker-teste npm run test
+    
 deploy:
   provider: pages
   skip_cleanup: true
