--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,11 @@ language: node_js
 node_js:
   - 14
 
+before_deploy:
+  - ./pagesBuild.sh
+
 deploy:
+  local_dir: './build'
   provider: pages
   skip_cleanup: true
   github_token: $GITHUB_TOKEN  # Set in the settings page of your repository, as a secure variable
