--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.1.1",
+    "canvas": "^2.6.1",
     "history": "^4.10.1",
     "proptypes": "^1.1.0",
     "react": "^16.13.1",
